--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,4 +1,4 @@
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://8.131.78.121:3306/job?useSSL=false&amp;useUnicode=true&amp;characterEncoding=gbk
+jdbc.url=jdbc:mysql://8.131.78.121:3306/sx?useSSL=false&amp;useUnicode=true&amp;characterEncoding=gbk
 jdbc.username=sx
 jdbc.password=123456
